--- a/literature.bib
+++ b/literature.bib
@@ -58389,4 +58389,14 @@ pages={1707--1713}}
   year      = {2013}
 }
 
+@article{saldana2021cross,
+	title="Cross-linguistic patterns of morpheme order reflect cognitive biases: An experimental study of case and number morphology",
+	author="Carmen {Saldana} and Yohei {Oseki} and Jennifer {Culbertson}",
+	journal="Journal of Memory and Language",
+	volume="118",
+	pages="104204",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/3126934620",
+	year="2021"
+}
+
 
