--- a/name.tex
+++ b/name.tex
@@ -175,7 +175,7 @@ The order of morphemes within a word follows well-documented cross-linguistic te
 In morphologically rich languages, nouns and verbs often have a string of two or more affix morphemes attached to a root, and the typological literature has documented universal tendencies, such as a preference for plural markers to be closer to noun stems than case markers \citep{,greenberg1963universals,bybee-morphology-1985}. 
 
 Explaining these linguistic universals has been an important subject of study \citep{bybee-morphology-1985, spencer2006linguistic, manova2010modeling, bauer2010an, rice2011principles,hay2004what}.
-Explanations of morpheme ordering have been stated in terms of correspondences between morpheme order \jd{be consistent in use of "order" vs "ordering"} and morpheme meanings \citep{bybee-morphology-1985,rice2000morpheme,saldana2021cross}, parallelism between morphology and syntax \citep{givon1971historical,venneman1973explanation,baker1985the}, and human morphological processing and usage frequencies \citep{hay2002speech, plag2002the, inkelas2016affix}.
+Explanations of morpheme ordering have been stated in terms of correspondences between morpheme ordering \jd{be consistent in use of "order" vs "ordering"} and morpheme meanings \citep{bybee-morphology-1985,rice2000morpheme,saldana2021cross}, parallelism between morphology and syntax \citep{givon1971historical,venneman1973explanation,baker1985the}, and human morphological processing and usage frequencies \citep{hay2002speech, plag2002the, inkelas2016affix}.
 %\jd{can a generalization be drawn about the high-level ways in which these accounts differ?}
 Explanations of the first kind state that morphemes are ordered based on differences in semantic scope \citep{rice2000morpheme} or relevance \citep{bybee-morphology-1985}, such that morphemes that are more semantically similar to the root occur closer to it.
 Explanations of the second kind propose that the order of morpheme mirrors the order of independent words with corresponding meanings, due to either language history or synchronic constraints on language.
@@ -187,7 +187,7 @@ A recent theory proposes a cognitive explanation for word and morpheme order in 
 They show that optimizing the memory-surprisal tradeoff amounts to placing elements close together that strongly predict each other, as measured by mutual information.
 %They also suggest that mutual information formalizes previous notions of strength of semantic association between morphemes \citep{bybee-morphology-1985}. %, such as \cite{bybee-morphology-1985}'s notion of \textit{relevance}.
 \citet{Hahn2020modeling} argue that this property of the memory-surprisal tradeoff generalizes previous processing theories which suggest that orderings tend to place together elements that are syntactically related \citep{rijkhoff-word-1986, hawkins-performance-1994}, conceptually related \citep{givon1985iconicity}, semantically relevant to each other \citep{bybee-morphology-1985}, or processed together in lexical access \citep{hay2004what}.
-While focused on explaining word order across 54 languages, \citet{Hahn2020modeling} also test whether two languages optimize the memory-surprisal tradeoff at the morphological level. In particular, they find that optimizing the memory-surprisal tradeoff partly reproduces the morpheme order of Japanese and Sesotho.
+While focused on explaining word order across 54 languages, \citet{Hahn2020modeling} also test whether two languages optimize the memory-surprisal tradeoff at the morphological level. In particular, they find that optimizing the memory-surprisal tradeoff partly reproduces the ordering of morphemes in Japanese and Sesotho verbs.
 
 
 %that the memory-surprisal tradeoff is more efficient when elements that are highly predictive of each other are placed together more closely.
@@ -198,7 +198,7 @@ While focused on explaining word order across 54 languages, \citet{Hahn2020model
 %- locality -- generalized to information locality
 
 
-Here, we test this theory on a broader basis.
+Here, we test this theory on a broader basis, considering both a larger set of languages and extending coverage from verbs to nouns.
 We consider data from four agglutinative languages -- i.e., languages with rich morphology where words tend to have multiple morphemes which are mostly realized separately (Korean, Turkish, Hungarian, and Finnish) -- in addition to the two language already considered by \citet{Hahn2020modeling} (Japanese and Sesotho).
 These languages have very substantial verbal inflection, and three of these languages (Turkish, Hungarian, Finnish) also have substantial noun inflection. We test both whether the memory-surprisal tradeoff accounts for universals of verb affix order documented by \cite{bybee-morphology-1985}, but also extend the scope of the analysis to nouns, where we test whether the theory accounts for Greenberg's Universal 39 \citep{greenberg-universals-1963}. %\jd{this universal has not been introduced yet}
 
@@ -444,8 +444,8 @@ Prominent accounts of morpheme ordering universals highlight the correspondence 
 \citet{bybee-morphology-1985} argues that ordering is determined by the semantic relevance of affixes to the root.
 For example, she argues that morphemes that change a verb's argument structure, such as passives and causatives, have a particularly strong relation to the verb's semantics, as they fundamentally alter the nature of the event described, whereas tense or agreement markers are much less tightly linked to the verb's meaning.
 Similarly, she argues that agreement markers are less relevant to the stem than TAM markers, since TAM interacts more closely with the verb's semantics; for instance, verbs denoting states or actions differ in the applicable aspect categories, but not in the applicable subject agreement features.
-While the intuitive notion of relevance provides an appealing account of the \textsc{Verb Affix Ordering} generalization, applying it to novel languages as an explanatory and testable notion requires some kind of formal operationalization of relevance that also applies to other language-specific kinds of morphemes, such as negation and politeness.
-%\jd{sounds accusatory. soften by highlighting which of the tendencies observed in section 2.2 and 2.3 this accounts for, which it doesn't, and then highlight that while the intuitive notion of relevance is appealing, it won't work as an explanatory notion when applied to novel languages unless operationalized formally in some way (or something like that)}
+The intuitive notion of relevance provides an appealing account of the \textsc{Verb Affix Ordering} generalization.
+However, applying it to novel languages as an explanatory and testable notion requires some kind of formal operationalization of relevance that also applies to other language-specific kinds of morphemes, such as negation and politeness.
 
 A second prominent semantic account holds that morphemes are ordered in the order in which their meanings combine, so that morphemes are closer to the root when their meanings have narrower scope \citep[e.g.,][]{rice2000morpheme, caballero2010scope,  narrog2010the, korotkova2010deriving}.
 A good example for the scope-based explanation is the relative ordering of valence and voice.
@@ -457,14 +457,16 @@ The order of affixes corresponds to the order in which the meanings of these suf
 The causative affix adds an argument indicating who makes an object freeze, and the passive affix then removes that argument, yielding a verb describing something that is being frozen by someone.
 
 
-While this account is successful at predicting the order of valence and voice (with the exception of anti-scope orderings in some languages, \citep{...}), it is less straightforwardly evaluated for other affixes because its predictions can depend on the specifics of how meaning is represented (see SI Section TODO for further discussion). %\jd{example?} \mhahn{TODO I'd prefer to place this discussion in an SI section, with some formal semantics formulas, rather than discussing here.}
+This account is successful at predicting the order of valence and voice and other morphemes \citep[e.g.,][]{rice2000morpheme, caballero2010scope,  narrog2010the, korotkova2010deriving}, (with the exception of anti-scope orderings in some languages, \citep{...}).
+However, it is not always straightforward to evaluate for other affixes, because its predictions can depend on the specifics of how meaning is represented (see SI Section TODO for further discussion).
+%\jd{example?} \mhahn{TODO I'd prefer to place this discussion in an SI section, with some formal semantics formulas, rather than discussing here.}
 There are also cases where semantically equivalent affixes are ordered differently in different languages, e.g., possessive suffixes are ordered differently in Finnish nouns than in Hungarian and Turkish nouns, seemingly without a motivating difference in semantic scope; the scope-based theory makes no prediction about how a given language's affixes are ordered.
-There are also scope-bearing items whose order varies between languages without apparent difference in meaning, for instance, negation appears closer to the root than TAM in Turkish and farther from it in Sesotho. \michael{perhaps provide example with negation to make this clear}
+Furthermore, there are scope-bearing items whose order varies between languages without apparent difference in meaning, for instance, negation appears closer to the root than TAM in Turkish and farther from it in Sesotho.
 
 Relatedly, \citet{saldana2021cross} argue that Greenberg's Universal 39 reflects a cognitive bias favoring orderings that match conceptual structure.
 In an artificial language learning paradigm, they exposed participants to stimuli where nouns had a case or number makrer (but not both), and then had participants extrapolate to forms containing both types of affixes.
 Learners of an artificial language strongly preferred the order described in Greenberg's Universal 39, which \citet{saldana2021cross} interpret as evidence for a cogntivie bias favoring a match between linear order and conceptual structure.
-They also found that this preference could be reversed by making the form of the affix strongly dependent on the stem, which is not accounted for by conceptual structure, but instead by a bias towards locality in dependencies.
+They also found that this preference could be reversed by making the form of the affix strongly dependent on the stem, which is not accounted for by conceptual structure, but which they interpret as reflecting a bias towards locality in dependencies.
 
 % BUT:
 %However, we show that this tendency can be reversed when the form of the case marker is made highly dependent on the noun stem, suggesting an influence of an additional bias for local dependencies.
@@ -502,13 +504,13 @@ A prominent cognitively-motivated theory of morpheme ordering is the theory of C
 This theory holds that affixes are closer to the root when they are more likely to be processed together with the base in the dual-route model of human lexical access   \citep{baayen1993on}.
 For instance, this model argues that more productive affixes are more likely to be accessed separately from the root than less productive affixes  \citep{baayen1993on}.
 This theory has been applied to the order of derivational affixes in English,  but not to the affix ordering generalizations described in Sections~\ref{sec:univ-nouns}--\ref{sec:univ-verbs}.
-\citet{inkelas2016affix} proposed that morphemes are ordered together when they are informative about each other, using a notion of informativity introduced by \citet{priva2017informativity}. In a pilot study of Turkish, they found preliminary evidence that high-informativity suffixes are closer to the root.
+Relatedly, \citet{inkelas2016affix} proposed that morphemes are ordered together when they are informative about each other, using a notion of informativity introduced by \citet{priva2017informativity}. In a pilot study of Turkish, they found preliminary evidence that high-informativity suffixes are closer to the root.
 
 
 %\jd{end on a signposting sentence that at a high level summarizes the previous accounts -- they all have independent merit and drawbacks/gaps in explanation -- and announces that you'll turn to the hypothesis that these generalizations arise from optimization for efficient memory-surprisal tradeoffs}
 
 
-Previous accounts explain the ordering of morphemes in terms of their meanings, their historical origins, or the way they are processed.
+Taken together, previous accounts explain the ordering of morphemes in terms of their meanings, their historical origins, or the way they are processed.
 These accounts all have independent merit and gaps in explaining morpheme ordering, accounting for complementary aspects of morpheme ordering by appealing to semantics, syntax, and human processing.
 We will now turn to the hypothesis that the generalizations arise from optimization for efficient memory-surprisal tradeoffs.
 
@@ -612,7 +614,7 @@ S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
 \end{equation}
 where $S_\infty$ is the average surprisal that would be achieved with perfectly veridical memory representations.
 
-Because $I_t$ can be estimated from text data, this result yields a method for estimating a bound on the tradeoff curve from text data.
+Because $I_t$ can be estimated from text data, this result yields a method for estimating a bound on the tradeoff curve from text data by tracing out possible memory capacities $\operatorname{H}[m_t]$ from $0$ to $+\infty$.
 
 
 \citet{Hahn2020modeling} show that tradeoffs are more efficient when pairs of elements with higher mutual information are ordered close together, a property they refer to as \textsc{Information Locality}.
@@ -922,16 +924,18 @@ These results support the idea that optimization for processing effort can expla
 
 \subsection{Limitations}
 
-%- limitations of computational estimation of the memory-surprisal tradeoff. %However: As the set of all moprphological forms of a language is typically finite (CITE), we believe that these limitations play a smaller role in morpheme order, compared to word order.
-
-A limitation of this study is that memory-surprisal tradeoffs are estimated on finite datasets that do not cover all possible morphological forms of a language. However, to the extent that this limitation impacts the estimation of memory-surprisal tradeoffs, it should equally apply to real and counterfactual orderings. We thus do not expect the relative measured efficiencies of different orderings to be impacted by the finiteness of data.
-
-Due to limitations in data availability, this study builds on languages from Eurasia and Africa, not representing Australia and America.
+Due to limitations in the availability of large-scale annotated text, this study builds on languages from Eurasia and Africa, not representing Australia and America.
 Among the languages, Hungarian and Finnish are genetically related, sharing a common ancestor about 5,000 years ago \citep{maurits2020best}.
 There is also some evidence for genetic relations beyond these (Japanese, Korean, Turkish), but such relations would have to be quite ancient.
 Importantly, the morphemes found in these languages as considered here are generally not cognate.
 Thus, the commonalities across languages found cannot be traced to inherited orderings of morphemes that are inherited from a common ancestor.
 %Furthermore, we note that the predictions of the Efficient Tradeoff Hypothesis of different orderings crucially depend not on the morphemes themselves (which might be inherited), but on the usage frequencies of different forms (e.g., of singulars and plurals).
+
+
+%- limitations of computational estimation of the memory-surprisal tradeoff. %However: As the set of all moprphological forms of a language is typically finite (CITE), we believe that these limitations play a smaller role in morpheme order, compared to word order.
+
+A limitation of this study is that memory-surprisal tradeoffs are estimated on finite datasets that do not cover all possible morphological forms of a language. However, to the extent that this limitation impacts the estimation of memory-surprisal tradeoffs, it should equally apply to real and counterfactual orderings. We thus do not expect the relative measured efficiencies of different orderings to be impacted by the finiteness of data.
+
 
 
 %- genre of data: written. but Sesotho is spoken (child-directed)
@@ -956,45 +960,56 @@ In this section, we describe how our account relates to other accounts across th
 %- extra-grammatical: frequency, productivity, parsability
 
 
-\paragraph{Relation to Grammatical Theories}
+%\paragraph{Relation to Grammatical Theories}
+
+%\mhahn{TODO I'll rewrite this}
 
 \citet{bybee-morphology-1985} argues that morphemes that are semantically more relevant to the root are ordered closer to it.
 We suggest that mutual information provides an operational formalization of semantic relevance.
 For instance, according to Bybee, passive markers are more relevant to the root than TAM markers, as they alter the verb's argument structure.
 We also expect that they have high mutual information with the verb stem, since only certain verbs (typically a subclass of the transitive verbs) can form a passive.
-The idea that mutual information is an operationalization of semantic closeness has also been suggested in other places; for instance, \citet{culbertson2020from} link mutual information to conceptual closeness as a driving factor of noun phrase modification.
 
 
-\mhahn{there is also the following commented-out section. these arguments are a bit speculative and not fleshed out. I feel like if we want to make those arguments, we might need to refer to SI sections where we go into a bit more detail, to avoid crowding the Discussion with relatively specialized discussion. What do you think?}
+%\mhahn{there is also the following commented-out section. these arguments are a bit speculative and not fleshed out. I feel like if we want to make those arguments, we might need to refer to SI sections where we go into a bit more detail, to avoid crowding the Discussion with relatively specialized discussion. What do you think?}
 
-%A similar argument can be made for the scope-based account, which holds that morphemes are ordered in the order in which their meanings combine to form the meaning of the full word \citep{rice2000morpheme}.
-%However, there are arguments that scope relations correlate with mutual information.
-%\citet{culbertson2020from} made a related argument for the order of nominal modifiers as in ``the four green books'', where mutual information predicts the order of attachment of modifiers to the noun.
+The Efficient Tradeoff Hypothesis can also be linked to the scope-based account, which holds that morphemes are ordered in the order in which their meanings combine to form the meaning of the full word \citep{rice2000morpheme}.
+In a study of noun phrase modifiers, \citet{culbertson2020from} argued that mutual information provides a statistical operationalization of scope in conceptual structure, i.e., that elements have higher mutual information when they are closer together in conceptual structure.
+If this is true, then the Efficient Tradeoff Hypothesis generally predicts ordering to respect scope relations.
+
+However, it also predicts that orderings can deviate from conceptual structure depending on the statistics of the input
+In particular, the Efficient Tradeoff Hypothesis explains the finding that, in the artificial language learning experiments of \citet{saldana2021cross}, a preference for orderings following Greenberg's Unviersal 30 could be reversed when the form of the case suffix depended on the noun:
+If the choice of case suffix depends on the noun, this increases the mutual information between the case suffix and the noun stem.
+As a consequence, orderings become more efficient that place the case suffix closer to the noun stem.
+
 %Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language-of-thought grammar such as mutual information will also correlate with scope ordering (see SI Appendix Section S4 for a simulation study).
 
+%made a related argument for the order of nominal modifiers as in ``the four green books'', where mutual information predicts the order of attachment of modifiers to the noun.
+
+
+%The idea that mutual information is an operationalization of semantic closeness has also been suggested in other places; for instance, \citet{culbertson2020from} link mutual information to conceptual closeness as a driving factor of noun phrase modification.
 
 
 
 Other grammatical accounts explain morpheme order in terms of a parallelism to word order, either through diachronic fossilization of words into affixes or through synchronic constraints on language \citep{givon1971historical,venneman1973explanation,baker1985the}.
-As a theory of order at multiple levels, the Efficient Tradeoff Hypothesis is compatible with parallelism between morpheme and word order.
-%\mhahn{TODO maybe say nore here}
+Unlike theories that only appeal to diachronic fossilization, the Efficient Tradeoff Hypothesis accounts for observations that morpheme orderings respecting the universals do not always historically arise from previous ordering of words.
+As a theory of order at multiple levels, the Efficient Tradeoff Hypothesis  provides a cognitive motivation for proposed principles of parallelism between morpheme and word order~\citep{baker1985the}.
 
 
-\paragraph{Relation to Previous Processing Accounts}
-
-The theory of Complexity-Based Ordering \citep{hay2002speech,plag2002the,hay2004what,hay2005shifting,plag2009suffix}.
-holds that affixes are closer to the root when they are less ``separable'', where separability indicates the productivity of an affix and the likelihood that affixes are processed separately with the base in human lexical access  \citep{baayen1993on}.
-%In particular, affixes are less ``separable'' when they are processed holistically together with the base in human lexical access \citep{baayen1993on}. %, such as in the dual processing race model of morphological access, which asserts that morphological forms can be processed either separately in terms of its components or as a whole \citep{baayen1993on}.
 %Forms are more separable if they are less likely to be processed together with the root (Baayen \& Schreuder 1999, Baayen \& Moscoso del Prado Mart ́ın 2005).
 %also mention \cite{manova2010suffix}
 %\cite{plag2009suffix} %http://www.sfs.uni-tuebingen.de/~hbaayen/publications/plagBaayenLanguage2009.pdf
-A statistical operationalization of separability is in terms of relative frequencies:
+
+The theory of Complexity-Based Ordering \citep{hay2002speech,plag2002the,hay2004what,hay2005shifting,plag2009suffix}.
+holds that affixes are closer to the root when they are less ``separable'', where separability indicates the productivity of an affix and the likelihood that affixes are processed separately with the base in the dual processing race model of human lexical access, which asserts that morphological forms can be processed either separately in terms of its components or as a whole  \citep{baayen1993on}.
+Unlike the other theories discussed here, this theory has primarily been applied to derivational suffixes in English, not applied to the crosslinguistic generalizations that we study here.
+Nonetheless, links can be established between this theory and the Efficient Tradeoff Hypothesis.
+A prominent operationalization of the separability of an affox is in terms of relative frequencies:
 affixes are more likely to be processed together with the root when the composite form has a higher frequency compared to the base form \citep{hay2001lexical}. % , lee2011ordering
 This has an interesting relation to mutual information: 
 If the compound form is very frequent, in relation to the baseline frequencies of the base and the affix, then there is high (pointwise) mutual information between them.
 %\mhahn{Make clear that this theory hasn't been applied to the kinds of affix orderin generalizations that we look at in this paper.}
 
-\mhahn{I'm pondering whether it would be beneficial to do some more explicit comparison using actual formulas both complexity-based ordering and perhaps the Inkelas 2016 idea, either here or in an SI section (the advantage of the latter would be that explanations can be more thorough without dominating the Discussion section) let me know what you think!}
+%\mhahn{I'm pondering whether it would be beneficial to do some more explicit comparison using actual formulas both complexity-based ordering and perhaps the Inkelas 2016 idea, either here or in an SI section (the advantage of the latter would be that explanations can be more thorough without dominating the Discussion section) let me know what you think!}
 
 The Efficient Tradeoff Hypothesis is also related to the proposal of \citet{inkelas2016affix} that morphemes are ordered together when they are informative about each other.
 While their notion of informativity \citep{priva2017informativity} is different from mutual information, the two quantities are related (see SI Appendix Section X for details).
@@ -1034,7 +1049,7 @@ While their notion of informativity \citep{priva2017informativity} is different 
 
 
 
-\paragraph{Relations to Accounts Stipulating Arbitrary Orderings}
+%\paragraph{Relations to Accounts Stipulating Arbitrary Orderings}
 
 There are also studies suggesting language-specific and essentially arbitrary properties of morpheme ordering.
 A classical approach to describing morpheme ordering is in terms of levels, where morphemes from a higher level occur before morphemes from a lower level \citep{siegel1979topics}, and in terms of templates that describe the ordering of morphemes \citep{simpson1986pronominal,spencer1991morphological,stump1992on,inkelas1993nimboran,hyman2003suffix,nordlinger2010verbal}.
@@ -1092,7 +1107,7 @@ It is an interesting problem for future research to study whether these correlat
 
 We have tested the recently proposed Efficient Tradeoff Hypothesis as a predictor of morpheme order with data from verbs and nouns across six languages.
 We found that attested morpheme orders provide more efficient tradeoffs than most other possible orderings and that many properties of observed orderings are recovered by optimizing for tradeoff efficiency.
-With the exception of verb inflection in Finnish and Sesotho, we found that optimized orderings agree with the attested orderings in more than 90\% of forms found in corpora.
+With the exception of verb inflection in Finnish and Sesotho, we found that optimized orderings predict real orderings better than baselines, and in some languages almost perfectly.
 Optimization also successfully predicts several universals of morpheme ordering, both for nouns and verbs.
 These results suggest that morpheme ordering reflects optimization of processing efficiency across languages.
 %\jd{add concluding sentence tying all together}
