--- a/literature.bib
+++ b/literature.bib
@@ -58399,4 +58399,15 @@ pages={1707--1713}}
 	year="2021"
 }
 
+@article{Cancho2004EuclideanDB,
+  title={Euclidean distance between syntactically linked words},
+  author={Ramon {Ferrer i Cancho}},
+  journal={Physical review. E, Statistical, nonlinear, and soft matter physics},
+  year={2004},
+  volume={70 5 Pt 2},
+  pages={
+          056135
+        }
+}
+
 
