--- a/literature.bib
+++ b/literature.bib
@@ -58210,7 +58210,7 @@ African Linguistics",
 
 @article{hay2005shifting,
 	title="Shifting paradigms: gradient structure in morphology.",
-	author="Jennifer {Hay} and R. Harald {Baayen}",
+	author="Jennifer {Hay} and Harald {Baayen}",
 	journal="Trends in Cognitive Sciences",
 	volume="9",
 	number="7",
